--- a/assets/css/cloud.css
+++ b/assets/css/cloud.css
@@ -53,9 +53,13 @@ body {
   border-right: 1px solid var(--color-border);
   z-index: 1;
 }
-
+h1 {
+  padding-top: 25px;
+}
 .section-title {
   color: var(--color-side);
+  margin-bottom: 25px;
+  padding-top: 25px;
 }
 
 .sidebar-logo {
@@ -213,6 +217,8 @@ pre {
   font-size: 16px;
   line-height: 1.5;
   overflow-x: auto;
+  margin-bottom: 15px;
+  width: 100%;
 }
 
 ul {
@@ -227,6 +233,7 @@ code {
   color: var(--color-side);
   border-radius: 10px;
   margin-top: 10px;
+  width: 100%;
   margin-bottom: 10px;
   padding: 0.6em 0.6em;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
@@ -275,6 +282,7 @@ img {
   }
   code {
     font-size: 11px;
+    width: 100%;
   }
 }
 
@@ -345,10 +353,10 @@ img {
   }
 
   code {
-    width: auto; 
+    width: 100%;
   }
   pre {
-    width: auto;
+    width: 100%;
     font-size: 14px;
   }
 }
@@ -367,6 +375,7 @@ img {
     display: none;
   }
   pre {
+    width: 100%;
     font-size: 14px;
   }
   code {
@@ -379,6 +388,7 @@ img {
 
 @media only screen and (max-width: 385px) {
   pre {
+    width: 100%;
     font-size: 11px;
   }
   code {
