--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-    color: #d6d6d6;
-    background-color: #1e2536;
+    color: #131313;
+    background-color: #ffffff;
     font-size: 18px;
     font-weight: 400;
 }
@@ -49,12 +49,12 @@ a {
     transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
     display: flex;
     width: 65px;
-    color: #d6d6d6;
+    color: #1d1d1d;
     height: 65px;
     justify-content: center;
     align-items: center;
     border-radius: 40px;
-    background-color: #181e2b;
+    background-color: #e2e7f1;
     box-shadow: 0 8px 48px 0 rgba(0, 0, 0, 0.12);
     margin: 0 5px;
     transition: all 200ms ease-out;
@@ -101,7 +101,7 @@ a {
     display: block;
     position: absolute;
     z-index: 1;
-    background-color: #181e2b;
+    background-color: #e2e7f1;
     position: absolute;
     top: 60px;
     right: 10px;
@@ -117,9 +117,9 @@ a {
 
 .dropdown-content a:hover {
     border-radius: 15px;
-    background-color: #212735;
-    color: #d6d6d6;
-    background: linear-gradient(to right, #f64e65, #f88161);
+    background-color: #e2e7f1;
+    color: #1d1d1d;
+    background: linear-gradient(to right, #1d1d1d, #8a8888);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: all 100ms ease-out;
@@ -145,7 +145,7 @@ a {
 h1 {
     margin-top: 0px;
     margin-bottom: 12px;
-    background-image: linear-gradient(333deg, #f64e65 58%, #f88161);
+    background-image: linear-gradient(333deg, #1d1d1d 58%, #8a8888);
     font-size: 48px;
     line-height: 140%;
     font-weight: 700;
@@ -154,7 +154,7 @@ h1 {
 .black-gradient-h1 {
     position: relative;
     display: inline-block;
-    background-image: linear-gradient(141deg, #f64e65, #f88161);
+    background-image: linear-gradient(141deg, #1d1d1d, #8a8888);
     font-size: 70px;
     font-weight: 700;
     text-align: center;
@@ -173,7 +173,7 @@ h1 {
 }
 
 .project {
-    background-color: #181e2b;
+    background-color: #e2e7f1;
     display: flex;
     position: relative;
     justify-content: center;
@@ -192,7 +192,7 @@ h1 {
 }
 
 .social {
-    background-color: #181e2b;
+    background-color: #e2e7f1;
     display: flex;
     flex-direction: row;
     /* Optional: Adjust this if you want the icons to be aligned horizontally */
@@ -215,20 +215,20 @@ h1 {
 .social-icons {
     text-decoration: none;
     font-size: 40px;
-    color: #d6d6d6;
+    color: #393939;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     margin-right: 10px;
     margin-left: 10px;
     transition: all 200ms ease-out;
-    /* background: linear-gradient(to right, #f64e65, #f88161); */
+    /* background: linear-gradient(to right, #1d1d1d, #8a8888); */
     /* -webkit-background-clip: text; */
     /* -webkit-text-fill-color: transparent; */
 }
 
 .background-social {
-    background-color: #1b2230;
+    background-color: #d1d9ea;
     border-radius: 24px;
     padding: 1.5rem;
     margin-left: 10px;
@@ -244,23 +244,26 @@ h1 {
 .social-text {
     padding-left: 0px;
     font-size: 18px;
-    color: #d6d6d6 !important;
-    background: linear-gradient(to right, #f64e65, #f88161);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.dsc-icon {
-    background: linear-gradient(to right, #f64e65, #f88161);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.social-icons:hover {
-    background: linear-gradient(to right, #f64e65, #f88161);
+    color: #1d1d1d !important;
+    background: linear-gradient(to right, #1d1d1d, #8c8d8f);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: all 200ms ease-out;
+}
+
+.dsc-icon {
+    background: linear-gradient(to right, #1d1d1d, #d1d9ea);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 200ms ease-out;
+}
+
+.social-icons:hover {
+    /* background: linear-gradient(to right, #1d1d1d, #d1d9ea); */
+    -webkit-background-clip: text;
+    /* -webkit-text-fill-color: transparent; */
+    /* transition: all 200ms ease-out; */
+    transform: scale(1.07);
 }
 
 
@@ -270,6 +273,7 @@ h1 {
     color: #323235;
     max-width: 500px;
     width: 100%;
+    transition: all 200ms ease-out;
 }
 
 .right-section {
@@ -279,7 +283,7 @@ h1 {
 h2 {
     margin-top: 0px;
     margin-bottom: 15px;
-    background-image: linear-gradient(333deg, #f64e65 73%, #f88161);
+    background-image: linear-gradient(300deg, #606060 73%, #1d1d1d);
     font-size: 36px;
     line-height: 140%;
     font-weight: 700;
@@ -292,7 +296,7 @@ h2 {
 .small-caps-subtitle {
     margin-top: 5px;
     margin-bottom: 0px;
-    color: #d6d6d6;
+    color: #1d1d1d;
     font-size: 14px;
     line-height: 160%;
     font-weight: 600;
@@ -303,7 +307,7 @@ h2 {
 p {
     margin-top: 25px;
     margin-bottom: 24px;
-    color: #a6a6a6;
+    color: #5f5f5f;
     font-size: 20px;
     line-height: 170%;
 }
@@ -313,7 +317,7 @@ p {
     padding: 15px 24px;
     border: none;
     width: 250px;
-    background-color: #181e2b;
+    background-color: #e2e7f1;
     display: flex;
     height: 55px;
     font-size: 18px;
@@ -322,7 +326,7 @@ p {
     border: 2px solid #313746;
     border-radius: 12px;
     transition: all 200ms ease-out;
-    color: #d6d6d6;
+    color: #1d1d1d;
     /* box-shadow: 0 8px 48px 0 rgba(99, 97, 97, 0.12); */
 }
 
